// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas al componente GifGrid Debe mostrar items 1`] = `
<Fragment>
  <h3>
    Hulk
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="https://localhost/cualquier/cosa,jpg"
    />
  </div>
</Fragment>
`;

exports[`Pruebas al componente GifGrid Debe mostrarse correctamente 1`] = `
<Fragment>
  <h3>
    Hulk
  </h3>
  Cargando...
  <div
    className="card-grid"
  />
</Fragment>
`;
